# uav-control

./: README.md
RTK/: IMPORTANT.txt  gps-vision.txt  gps_param.param
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/lib/ddynamic_reconfigure/: ddynamic_reconfigure_auto_update_test  fake_dynamic_reconfigure_server  test_bool_dynamic_reconfigure_server
catkin_ws/devel/lib/pkgconfig/: ddynamic_reconfigure.pc  realsense2_camera.pc  realsense2_description.pc  tomavros.pc
catkin_ws/devel/lib/tomavros/: tomavros
catkin_ws/devel/share/ddynamic_reconfigure/cmake/: ddynamic_reconfigureConfig.cmake
catkin_ws/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-paths.cmake  (+1 more)
catkin_ws/src/tomavros/: CMakeLists.txt
catkin_ws/src/tomavros/src/: tomavros_node.cpp
catkin_ws/tmp/display_trajectory/: CMakeLists.txt  package.xml
catkin_ws/tmp/display_trajectory/launch/: display_marker.launch
catkin_ws/tmp/display_trajectory/model/: display.rviz
catkin_ws/tmp/display_trajectory/src/: pos2markerarray.cpp
control_drone_ncu/: main.py  readme.txt  set_origin_local.py
control_drone_ncu/result/2022_12_23_14_36/: mavros_local.txt
control_drone_ncu/result/2022_12_23_14_37/: mavros_local.txt
control_drone_ncu/result/2022_12_23_14_56/: mavros_local.txt
control_drone_ncu/result/2022_12_23_14_59/: mavros_local.txt
control_drone_ncu/result/2022_12_23_15_8/: mavros_local.txt
uav_control/: CMakeLists.txt  package.xml
uav_control/scripts/: client.py  fly.py  mavros_control_drone.py
uav_control/srv/: Coord.srv
(+3 files in other folders)
